tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__UseNanoTechtopro-rdpQZW1YQ92vgnjgHVW8Jg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7879122165043674150,
  "prerequisites": [
    2649
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After unlocking Carbon Nanites, we can now use it to extract the needed lanthanide resources in large quantities.\n\nOf course you better be ready. It's expensive until you got the Nano Forge.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Use Nano Tech to produce Lanthanides",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2649
  ],
  "rewards": [],
  "tasks": []
}
